--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -11,41 +11,30 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Random numbers</title>
+    <title>MNIST Digit Predictor</title>
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1>Generate random numbers</h1>
+          <h1>MNIST Digit Predictor</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h5>Use the dropdown to select the number of random numbers to generate and click Generate.</h5>
+          <h5>Please draw an image inside the canvas field then press predict to see if the NN predicted correctly</h5>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <form>
-            <div class="form-group">
-              <label for="noofnos">Number of numbers</label>
-              <input type="number" class="form-control" id="noofnos" aria-describedby="noofonoshelp" value="5" min="1" max="100">
+            <div>
+              <canvas id="canvas" style="border: 1px solid black"></canvas>
             </div>
             <div class="form-group">
-              <button type="submit" id="submitButton" class="btn btn-primary">Generate</button>
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" id="randomNumbers" rows="8" placeholder="Click generate to generate numbers here." readonly></textarea>
+              <button type="predict" id="predictButton" class="btn btn-primary">Predict</button>
             </div>
           </form>
-        </div>
-      </div>
-      <div class="row"> 
-        <div class="col">
-          <canvas id="canvas" style="border: 1px solid black">
-            
-          </canvas>
         </div>
       </div>
     </div>
